<resources>
    <string name="app_name">Coupon</string>
    <string name="beta">Coupon </string>
    <string name="beta_version">Beta Version</string>
    <string name="txt_company_name">Powered by Edenred </string>
    <string name="action_settings">Settings</string>
    <string name="Help">Settings</string>
    <string name="Account">Account</string>
    <string name="Logout">Sign Out</string>
    <string name="Logout_msg">Sign out confirmation \nAre you sure to sign out ?</string>
    <string name="LogIn_msg">You are in Guest User \nAre you sure to sign In ?</string>
    <string name="Cart">Cart</string>
    <string name="ProductDescription">Coupon Details : </string>
    <string name="Participating_Outlets"> Shop Address </string>
    <string name="Term"> Terms of Use </string>
    <string name="Term_condition"> Terms &amp; Conditions</string>
    <string name="coupon_listing"> Coupons </string>
    <string name="Term_use">Terms &amp; Conditions of Use</string>
    <string name="Privacy">Privacy Policy</string>
    <string name="Today_Menu"> Options </string>
    <string name="How_to_Redeem"> How to Redeem </string>
    <string name="Update"> Update Qty </string>
    <string name="Delivery_Time_From">Deliver Time From</string>
    <string name="Pickup_Time_From">Pickup Time From</string>
    <string name="Product_Filter">Categories</string>
    <string name="Filter">Filter</string>
    <string name="apply">APPLY</string>
    <string name="ecoupon">eVoucher : </string>
    <string name="Support_Hotline">Support Hotline</string>
    <string name="Merchant_Hotline">Merchant Hotline</string>
    <string name="Feed_Back">Feedback</string>
    <string name="Submit">Submit</string>
    <string name="Email">Email</string>
    <string name="Email_mobile">Email</string>
    <string name="username">Username</string>
    <string name="Signing">Signing in ..</string>
    <string name="Subject">Subject</string>
    <string name="Message">Message</string>
    <string name="Enter_email_address">To :</string>
    <string name="Enter_email_Subject">Subject:</string>
    <string name="facebook_app_id">655551837989474</string>
    <string name="Coupon_Downloaded">Coupon Downloaded</string>
    <string name="Please_chk_Redeem">Please check your \&apos;My Coupon\&apos; in Redeem</string>
    <string name="In_store_Redeem">In-store Redeem</string>
    <string name="Booking">Booking</string>
    <string name="OutCall">OutCall</string>
    <string name="OK">OK</string>
    <string name="Password_has_been_sent">Password has been sent to Your Mail</string>
    <string name="Please_check_email">Please check your email address is valid.</string>
    <string name="Already_Registered">Check your email</string>
    <string name="Please_enter_registered">Please enter registered email.</string>
    <string name="Invalid_Pin_no">Invalid Pin no.</string>
    <string name="Retry">Retry</string>
    <string name="NO">NO</string>
    <string name="Confirm_Redeem">Confirm Redeem</string>
    <string name="Are_you_sure">Are you sure to exist from preview screen ?</string>
    <string name="Bali_COUPON">MZCoupon</string>
    <string name="Download_Coupon">Download Coupon</string>
    <string name="do_not_leave_emty">Please do not leave any field empty.</string>
    <string name="Password_must_8_20">Password must be 8 - 20 characters long</string>
    <string name="ensure_password_valid">Please ensure password is the valid.</string>
    <string name="Select_Country">Please Select Country</string>
    <string name="Bali">MZCoupon</string>
    <string name="Pay_Now">Pay Now</string>
    <string name="Events">Events</string>
    <string name="UWelcome">Welcome</string>
    <string name="Country_of_Residence">Car Brand / Model</string>
    <string name="Register_with_Email">Register with Email</string>
    <string name="UName">Name</string>
    <string name="By_registering">By registering, I agree to the term &amp; conditions.</string>
    <string name="fb_register">Register using facebook.</string>
    <string name="Register_Email">Register with Email</string>
    <string name="Register_now">Register Now</string>
    <string name="Useful_Contact">Useful Contact</string>
    <string name="Contact_Information">Contact Information</string>
    <string name="Location">Location</string>
    <string name="Address">Address</string>
    <string name="Country">Country</string>
    <string name="Postal_Code">Postal Code</string>
    <string name="Business_Name">Business Name</string>
    <string name="Phone_No">Phone No</string>
    <string name="Business_Sites">Business Sites</string>
    <string name="Business_Profile">Business Profile</string>
    <string name="Rewards_Coupon">Rewards/Coupon</string>
    <string name="Rewards">Rewards</string>
    <string name="Coupon">Coupon</string>
    <string name="Coupons">Coupons</string>
    <string name="Hotdeals">Hotdeals</string>
    <string name="Favourite">Favourites</string>
    <string name="From_gallery">From gallery</string>
    <string name="Take_picture">Take picture</string>
    <string name="Categories">Categories</string>
    <string name="Enter_Text">Message :</string>
    <string name="About_Us">About Us</string>
    <string name="Outlets">Redemption Address</string>
    <string name="Payment">Paid</string>
    <string name="Payment_title">Payment</string>
    <string name="Payments">Payments</string>
    <string name="Contact">Contact</string>
    <string name="Remark">REMARKS</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="notes">NOTES</string>
    <string name="Product_Name"> Product : </string>
    <string name="Shop_Name"> Shop : </string>
    <string name="OrderType"> OrderType : </string>
    <string name="Date"> Date : </string>
    <string name="Time"> Time : </string>
    <string name="Original_Price">Original</string>
    <string name="Now">Now</string>
    <string name="Call">Call</string>
    <string name="CallNow">Call Now</string>
    <string name="Items">Items</string>
    <string name="Modifier">Options</string>
    <string name="Pickup">Pick up</string>
    <string name="Delivery">Delivery</string>
    <string name="Order_Typetit">Options</string>
    <string name="Pickup_From">PICK UP ADDRESS</string>
    <string name="Delivery_to">DELIVERY ADDRESS</string>
    <string name="bookmark">Bookmark your favourite coupons here.</string>
    <string name="cartempty">Please add coupons to your Cart and proceed with Payment!</string>
    <string name="No_worries">No worries, Just provide us your Email</string>
    <string name="Thank_You">Thank You</string>
    <string name="check_Your">Please Check your Mail for the new reset Password</string>
    <string name="Close">CLOSE</string>
    <string name="Nearby">What\&apos;s Nearby?</string>
    <string name="Back">&#60; Back</string>
    <string name="Sign_In">Sign In</string>
    <string name="walletSign_In">Wallet Sign In</string>
    <string name="Register">Register</string>
    <string name="New_Register">New Register</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Forgot_Password_title">Forgot Password</string>
    <string name="Password">Password </string>
    <string name="Name">Name</string>
    <string name="Password_char">Password (8-20 chars)</string>
    <string name="phoneno">Phone/mobile</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="Confirm">Confirm</string>
    <string name="Preview">Preview</string>
    <string name="Products">Products</string>
    <string name="Redeem">Redeem</string>
    <string name="Redeem_result">Redemption Result</string>
    <string name="Use_This_eCoupon"> Use This eCoupon </string>
    <string name="Add_Cart">Add to Cart</string>
    <string name="Order_View">Order Details</string>
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="Agree">I Agree</string>
    <string name="Coupon_Redeemed_instore">Coupon Redeemed In-Store</string>
    <string name="Coupon_Redeemed_already">Coupon Already Redeemed</string>
    <string name="redemption">Redemption Success !</string>
    <string name="Please_Sign">Please Sign In With Your Registered Details</string>
    <string name="Welcome_Back">Welcome Back</string>
    <string name="Outlet_Location">Redemption Location</string>
    <string name="Special_Detail">Special Detail</string>
    <string name="Specials">Specials</string>
    <string name="Activity">Transaction Records</string>
    <string name="Details">Details</string>
    <string name="Change_Password">Change Password</string>
    <string name="Save">Save</string>
    <string name="Current_Password">Current Password</string>
    <string name="New_Password">New Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Change_profile">Edit Profile</string>
    <string name="click_BACK_exit">Please click BACK again to exit</string>
    <string name="Updated">Updated</string>
    <string name="Cart_Is_Empty">Cart Is Empty</string>
    <string name="Item_Deleted">Item Deleted</string>
    <string name="Password_Changed">Password Changed</string>
    <string name="User_Password_Wrong">Password is the Same As Old.</string>
    <string name="Password_And_Confirm_not_equal">Please ensure password is the valid.</string>
    <string name="Redeemed_Failed">Redeemed Failed ! </string>
    <string name="Redeemed_Failed_qr">Coupon Out of Stock</string>
    <string name="Product_out">Product out of Stock</string>
    <string name="pay_fail">Payment Unsuccessful, please try again.</string>
    <string name="pay_succe">Your purchased voucher(s) will be uploaded to you shortly. Please check “My eCoupon”.</string>
    <string name="Mail_Sending">Mail Sending...</string>
    <string name="Mail_Sent">Mail Sent</string>
    <string name="Can_Choose_only">Can Choose only</string>
    <string name="Items_in_this">Items in this</string>
    <string name="sele_only">SELECT ONE ONLY</string>
    <string name="No_Modifiers">No Options</string>
    <string name="Chosse_any_one_Items">Chosse any one Items </string>
    <string name="Modifier_in_this">Options in this</string>
    <string name="Choose_Pickup_From_and_Time">Choose Pick up From and Time</string>
    <string name="Choose_Delivery_From_and_Time">Choose Delivery From and Time</string>
    <string name="Choose_One_of_order_type">Choose One of order type</string>
    <string name="Order_Confirmed">Order Confirmed</string>
    <string name="Purchased">Added to cart</string>
    <string name="Redeemed">Redeemed</string>
    <string name="Try_Again">Sign in failed ! The Email or Password that you entered is incorrect</string>
    <string name="pl_enterfeilds">Please do not leave any field empty.</string>
    <string name="pl_username">Please enter your username</string>
    <string name="Pl_password">Please enter your password</string>
    <string name="No_server_Connection">No server Connection</string>
    <string name="Please_Enter_Email_and_Password">Please Enter Email and Password</string>
    <string name="Google_Map_Navigation">Google Map Navigation</string>
    <string name="Payment_Success">Payment Success</string>
    <string name="Payment_Failed">Payment Failed</string>
    <string name="Sure_Delete">Confirm to delete?</string>
    <string name="No_Internet">No Internet!</string>
    <string name="No_voucher">No purchased Coupons yet</string>
    <string name="No_redeemed">No redeemed Coupons yet</string>
    <string name="No_expired">No expired Coupons yet</string>
    <string name="drag_hint">Shake / Scan / Code</string>
    <string name="message">Message</string>
    <string name="transfer_now">Transfer now</string>
    <string name="transfer_coupon">Transfer Coupon</string>
    <string name="skip_transfer">Skip Transfer</string>
    <string name="guest_login">Guest Login</string>
</resources>