<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/feedklayout"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
    android:background="@drawable/specialbg"
   >
    
 <RelativeLayout
        android:id="@+id/tabBar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/background_dark_orange"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/Feed_Back"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:typeface="monospace" >

        </TextView>

        <Button
            android:id="@+id/imageViewMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@color/background_dark_orange"
            android:textSize="16sp"
            android:text="@string/Submit"
            android:textColor="@color/text_color"
            />

     </RelativeLayout>
     
 

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/Enter_email_address"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:textColor="#000000"
    android:textSize="14sp"/>

<EditText
    android:id="@+id/email_address"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/apptheme_edit_text_holo_light"
    android:hint="@string/Email"
    android:inputType="textEmailAddress"
    android:textColor="#000000"
    android:textColorHint="#000000"
    android:textSize="14sp" />

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/Enter_email_Subject"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:textColor="#000000"
    android:textSize="14sp" />

<EditText 
   android:id="@+id/email_subject"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:inputType="textEmailSubject"
   android:layout_marginRight="16dp"
   android:layout_marginLeft="16dp"
   android:textSize="14sp"
   android:background="@drawable/apptheme_edit_text_holo_light"
   android:textColor="#000000"
   android:textColorHint="#000000"
   android:hint="@string/Subject"
   />



<WebView 
   android:id="@+id/email_text"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:layout_marginRight="16dp"
   android:layout_marginLeft="16dp"
   android:layout_marginBottom="10dp"
   android:textSize="14sp"
   android:textColor="#000000"
   android:hint="@string/Message"
   android:textColorHint="#000000"
   />

<ProgressBar
    android:id="@+id/progressBar1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" />

</LinearLayout>
