<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feedklayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/specialbg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/tabBar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/tab"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/Feed_Back"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace">

        </TextView>

        <Button
            android:id="@+id/imageViewMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@color/tab"
            android:text="@string/Submit"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:layout_alignTop="@+id/txtTitle"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp" />

    </RelativeLayout>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/Enter_email_address"
        android:textColor="#000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="14sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/Enter_email_Subject"
        android:textColor="#000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email_subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:hint="@string/Subject"
        android:inputType="textEmailSubject"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="14sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/Enter_Text"
        android:textColor="#000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:hint="@string/Message"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>
