<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/specialbg">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/sendtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/transfer_coupon"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:gravity="center"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="15sp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:gravity="center"
            android:hint="@string/message"
            android:maxLines="1"
            android:visibility="gone"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp" />


        <Button
            android:id="@+id/signinbutton"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/name"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@color/tab"
            android:padding="0dp"
            android:text="@string/transfer_now"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/signinbutton"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/skip_transfer"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>