<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/specialbg" >
    
    <RelativeLayout
        android:id="@+id/tabBar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/background_dark_orange"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:text="@string/Redeem_result"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:typeface="monospace" >

        </TextView>
		
     </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/redemsucess" />
    
    <TextView
         android:id="@+id/TextViewCal"
          android:layout_width="fill_parent"
          android:layout_height="40dp"
          android:gravity="center"
          android:layout_centerInParent="true"
          android:layout_alignParentBottom="true"
          android:textColor="@color/text_color"
          android:textSize="15sp"
          android:text="@string/Close"
          android:background="@color/tab"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:textSize="14dp"
        android:layout_marginTop="25dp"
        android:text="@string/Coupon_Redeemed_instore"
        android:textColor="#000000"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>